# tftpw

./: .env.example  Dockerfile  LICENSE  README.md  app.py  docker-compose.yml  pyproject.toml
static/js/: main.js
templates/: index.html
